# C-project

./: Makefile  config.status  final.glade
autom4te.cache/: requests
src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  final  interface.c  interface.c.bak  interface.h.bak  main.c  obs.c  obs.h  obs.txt  obs2.txt
src/.deps/: callbacks.Po  obs.Po
